rds-policy/deploy/11-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rds-mr-webhook
  namespace: openshift-lightspeed
spec:
  selector:
    app: rds-mr-webhook
  ports:
    - port: 8080
      targetPort: 8080
      name: http
